<resources>
    <string name="app_name">M-Voting</string>
    <string name="input_error_nama">Input name</string>
    <string name="input_error_nim_length">NIM not valid</string>
    <string name="input_error_nim">Input NIM</string>
    <string name="input_error_email">Input email</string>
    <string name="input_error_email_invalid">Input Email</string>
    <string name="input_error_password">Input password</string>
    <string name="input_error_password_length">Password not valid</string>
    <string name="input_error_phone">Input phone number</string>
    <string name="input_error_phone_invalid">Phone number not valid</string>
    <string name="registration_fail">Registration failure</string>
    <string name="email_address">Email address</string>
    <string name="name">Name</string>
    <string name="nama">Nama</string>
    <string name="nim">NIM</string>
    <string name="phone_number">Phone</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="input_error_kode">Input NIM</string>
    <string name="input_error_kode_length">NIM not valid</string>
    <string name="no_data_nim">NIM does not exist</string>
    <string name="about">H-Voting App</string>
    <string name="adalah">adalah aplikasi pengambilan suara pemilihan Ketua Himpunan Mahasiswa Teknik Informatika dengan menggunakan perangkat Android</string>
    <string name="ayo">Ayooo !!!!</string>
    <string name="berikan">Berikan Suara Anda Demi Kemajuan HUMANIKA</string>
    <string name="satu_asa">Satu Asa Satu Jiwa Satu Semangat</string>
    <string name="informatika">INFORMATIKA</string>
    <string name="back">Back</string>
    <string name="salam_informatika">Salam Informatika</string>
    <string name="todo">TODO</string>
    <string name="register">Register</string>
    <string name="mendaftar">Mendaftar</string>
    <string name="qr_code">QR Code</string>
    <string name="sudah_registrasi">Sudah registrasi</string>
    <string name="result_vote">Result Vote</string>
    <string name="hasil_perolehan_suara">Hasil perolehan suara</string>
    <string name="tentang_aplikasi">Tentang aplikasi</string>
    <string name="tabel_admin_app">Tabel Admin App</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="registrasi_di_buka">Registrasi di buka</string>
    <string name="set_tanggal">set tanggal</string>
    <string name="regitrasi_berkahir">Regitrasi Berkahir</string>
    <string name="pilih_tanggal">dd-MM-yyyy</string>
    <string name="jadwal_pengumuman">Jadwal Pengumuman</string>
    <string name="tambah_calon">Tambah Calon</string>
    <string name="lihat_calon">Lihat Calon</string>
    <string name="edit_hapus_calon">Edit / Hapus Calon</string>
    <string name="masukkan_nim_anda">Masukkan NIM Anda</string>
    <string name="masukkan_nama">Masukkan nama</string>
    <string name="daftar">Daftar</string>
    <string name="masukkan_no_telephone">Masukkan No telephone</string>
    <string name="masukkan_alamat_email">Masukkan alamat email</string>
    <string name="batal">Batal</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="user">User</string>
    <string name="data_pemilih">Data Pemilih</string>
    <string name="menu">Menu</string>
    <string name="data_calon">Data Calon</string>
    <string name="data_admin">Data Admin</string>
    <string name="set">Set</string>
    <string name="jadwal_registrasi">Jadwal Registrasi</string>
    <string name="logout">Logout</string>
    <string name="keluar">Keluar</string>
    <string name="no_urut">No Urut</string>
    <string name="angkatan">Angkatan</string>
    <string name="visi">Visi</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="jumlah_suara">Jumlah Suara</string>
    <string name="misi">Misi</string>
    <string name="suara">Suara</string>
    <string name="not_vote">Not Vote</string>
    <string name="status">Status</string>
    <string name="candidate">Candidate</string>
    <string name="_1">:</string>
    <string name="see_more">See More</string>
    <string name="textview">TextView</string>
    <string name="forgot_password">Forgot password</string>
    <string name="login">login</string>
    <string name="mohon_maaf">Mohon Maaf…</string>
    <string name="hasil_pengumuman">Pengumuman hasil perolehan suara tidak dapat ditampilkan!</string>
    <string name="tanggal_pengumunan">Tanggal Pengumunan</string>
    <string name="pengumuman">Pengumuman</string>
    <string name="ok">OK</string>
    <string name="regis_gagal">Registrasi Tidak dapat dilakukan!</string>
    <string name="tanggal_resigtrasi">Tanggal Resigtrasi</string>
    <string name="sampai">Lakukan registrasi sebelum tangga</string>
    <string name="pesan_ini_hanya_tampil_sekali">Pesan ini hanya tampil sekali!!!</string>
    <string name="selamat">Selamat !!!!</string>
    <string name="registrasi_anda_berhasil">Registrasi anda berhasil</string>
    <string name="masuk_ke_menu_qr_code_untuk_dapat_melanjutkan_proses_vote">Masuk ke menu QR Code untuk dapat melanjutkan proses Vote.</string>
    <string name="tampil_data_pemilih">Tampil Data Pemilih</string>
    <string name="edit_dan_hapus">Edit dan Hapus</string>
    <string name="kembali_ke_dashboard">Kembali ke Dashboard</string>
    <string name="show_qr_code">Show QR Code</string>
    <string name="insert_your_nim">Insert Your NIM</string>
    <string name="name_candidate">Name Candidate</string>
    <string name="picture">Picture</string>
    <string name="description">Description</string>
    <string name="voter">Voter</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="vote">Vote</string>
    <string name="persen">%</string>
    <string name="to_reset_password_enter_your_email_press_the_button_and_check_mail_to_follow_instruction">To reset password, enter your email, press the button and check mail to follow instruction.</string>
    <string name="your_email_here">Your email here</string>
    <string name="reset_password">Reset Password</string>

</resources>
