<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_margin="15dp"
android:padding="15dp"
tools:context=".Calon.TambahCalon">



<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="UselessParent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        tools:ignore="UselessParent">


        <EditText
            android:id="@+id/no_urut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/no_urut"
            android:maxLength="4"
            android:inputType="number"
            android:importantForAutofill="no"
            tools:targetApi="o" />


        <EditText
            android:id="@+id/name_candidate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_candidate"
            android:inputType="text"
            android:importantForAutofill="no"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/angkatan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/angkatan"
            android:maxLength="4"
            android:inputType="number"
            android:importantForAutofill="no"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/visi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/visi"
            android:inputType="textMultiLine"
            android:importantForAutofill="no"
            tools:targetApi="o" />


        <EditText
            android:id="@+id/misi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/misi"
            android:inputType="textMultiLine"
            android:importantForAutofill="no"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:importantForAutofill="no"
            tools:targetApi="o" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/picture"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/select_Image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@android:drawable/ic_menu_camera"
                android:contentDescription="@string/todo" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:max="100"
            android:progress="0"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/imageContainer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:visibility="gone"
            android:contentDescription="@string/todo" />

        <Button
            android:id="@+id/ButtonSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@color/colorPrimary"
            android:text="@string/save" />


        <Button
            android:id="@+id/button_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/colorAccent"
            android:text="@string/cancel"/>


    </LinearLayout>
</ScrollView>

</RelativeLayout>