<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fend.m_voting.Admin.TambahAdmin"
    android:layout_margin="15dp"
    android:padding="15dp">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            tools:ignore="UselessParent">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginBottom="25dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/humanika"
                />

            <EditText
                android:id="@+id/edit_text_nim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nim"
                android:maxLength="9"
                android:inputType="number"
                android:importantForAutofill="no"
                tools:targetApi="o"/>

            <EditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:importantForAutofill="no"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/edit_text_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text"
                android:importantForAutofill="no"
                tools:targetApi="o"/>


            <EditText
                android:id="@+id/edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:importantForAutofill="no"
                tools:targetApi="o"/>


            <EditText
                android:id="@+id/telp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:inputType="number"
                android:maxLength="15"
                android:nextFocusDown="@id/ButtonSave"
                android:importantForAutofill="no"
                tools:targetApi="o"/>

            <Button
                android:id="@+id/ButtonSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@color/colorbutton"
                android:text="@string/save" />

            <Button
                android:id="@+id/button_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@color/colorAccent"
                android:text="@string/cancel"/>


        </LinearLayout>
    </ScrollView>

</RelativeLayout>