<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:padding="15dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            tools:ignore="UselessParent">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mohon_maaf"
                android:layout_margin="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/regis_gagal"
                android:layout_margin="5dp" />



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginBottom="15dp"
                android:text="@string/tanggal_resigtrasi"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/settglmulai"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textStyle="bold"
                android:textSize="35sp"
                android:textAlignment="center"
                android:text="@string/pengumuman"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/sampai"
                android:textAlignment="center"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/settglakhir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textStyle="bold"
                android:textSize="35sp"
                android:textAlignment="center"
                android:text="@string/pengumuman"/>

            <Button
                android:id="@+id/button_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@color/colorPrimary"
                android:textColor="#ffffff"
                android:text="@string/ok" />



        </LinearLayout>


    </ScrollView>

</android.support.constraint.ConstraintLayout>