<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/textViewNIM"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textview"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="16dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_weight="3"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textSize="12sp"
                        tools:ignore="NestedWeights" />

                    <TextView
                        android:layout_width="10dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/_1" />

                    <TextView
                        android:id="@+id/textViewName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textview"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textSize="14sp"
                        tools:layout_editor_absoluteX="16dp"
                        tools:layout_editor_absoluteY="16dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_weight="3"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:text="@string/status"
                        android:textSize="12sp"
                        tools:ignore="NestedWeights" />

                    <TextView
                        android:layout_width="10dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/_1" />

                    <TextView
                        android:id="@+id/textViewStatus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textview"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textSize="14sp"
                        tools:layout_editor_absoluteX="16dp"
                        tools:layout_editor_absoluteY="16dp" />
                </LinearLayout>


            <TextView
                android:layout_margin="15dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/see_more"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@color/colorPrimary"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
